refactor API. Add logging. Add error handling. Expose swagger
