# app/routes/index.js
@@ -1,0 +1,8 @@
+module.exports.newBadge            = require('./badge/new')
+module.exports.updateBadgeMetadata = require('./badge/update')
+module.exports.getBadgeMetadata    = require('./badge/metadata');
+module.exports.getDashboardBadge   = require('./badge/dashboard');
+module.exports.getBadgeList        = require('./badge/list');
+
+module.exports.updateLocation      = require('./location/update');
+module.exports.getLocation         = require('./location/get');
